Animation 'Todoanime' created

--- a/Style.css
+++ b/Style.css
@@ -10,6 +10,15 @@
   }
 }
 
+@keyframes Todoanime {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .DoControls:hover {
   height: 30px;
   cursor: pointer;
